code letzter com

--- a/notebooks/MonteCarlosimulationFinal.ipynb
+++ b/notebooks/MonteCarlosimulationFinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "139cb328",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "70deed3a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "745188fa",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "f779cff4",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "16e518a0",
    "metadata": {},
    "outputs": [],
@@ -201,8 +201,8 @@
     "    return m_final, se_final, ci, q95_final\n",
     "\n",
     "# --- 2. Durchführung Szenarien-Vergleich ---\n",
-    "# 35/Woche = Normal, 235/Woche = Systemlimit \n",
-    "szenarien = [35, 235]\n",
+    "# 200/Woche = Normal, 285/Woche = Grenzbereich 300 = Überlastung \n",
+    "szenarien = [200, 285, 300]\n",
     "results = []\n",
     "\n",
     "for p_week in szenarien:\n",
@@ -210,7 +210,7 @@
     "    rho = ((p_week / 7.0) * MEAN_LOS) / TOTAL_BEDS # Theoretische Auslastung\n",
     "    \n",
     "    results.append({\n",
-    "        \"Szenario\": \"Normal\" if p_week == 35 else \"Stress-Test\",\n",
+    "        \"Szenario\": \"Normal\" if p_week == 200 else \"Stress-Test\",\n",
     "        \"Pat./Woche\": p_week,\n",
     "        \"Auslastung (ρ)\": f\"{rho*100:.1f}%\",\n",
     "        \"Mean Wartezeit\": f\"{m:.4f} d\",\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "1bafac4a",
    "metadata": {},
    "outputs": [
@@ -235,8 +235,9 @@
       "ERGEBNISSE DER KRANKENHAUS-SIMULATION (Weg A: Lastvariation)\n",
       "===============================================================================================\n",
       "   Szenario  Pat./Woche Auslastung (ρ) Mean Wartezeit Std.-Fehler (SE) 95%-Konf.-Intervall Ø 95%-Quantil\n",
-      "     Normal          35          12.4%       0.0000 d           0.0000      [0.000, 0.000]      0.0000 d\n",
-      "Stress-Test         235          83.2%       0.0000 d           0.0000      [0.000, 0.000]      0.0000 d\n",
+      "     Normal         200          70.8%       0.0000 d           0.0000      [0.000, 0.000]      0.0000 d\n",
+      "Stress-Test         285         100.9%       1.0425 d           0.1961      [0.658, 1.427]      2.5385 d\n",
+      "Stress-Test         300         106.2%       3.1533 d           0.2910      [2.583, 3.724]      6.8037 d\n",
       "-----------------------------------------------------------------------------------------------\n",
       "Bedingungen: Betten = 565, Replikationen R = 20, Dauer = 150 Tage.\n"
      ]
