last comi hopefully

--- a/tests/infunferschrittern.ipynb
+++ b/tests/infunferschrittern.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "60da8350",
    "metadata": {},
    "outputs": [
@@ -13,51 +13,30 @@
       "\n",
       "LASTSTEIGERUNGS-ANALYSE (DES + MONTE CARLO)\n",
       "========================================================================================================================\n",
-      " Pat./Woche Auslastung ρ Ø Wartezeit (d)    SE       95%-KI P(Engpass) Zeit im Engpass (%) Belastungsstatus\n",
-      "         35        12.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         40        14.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         45        15.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         50        17.7%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         55        19.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         60        21.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         65        23.0%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         70        24.8%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         75        26.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         80        28.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         85        30.1%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         90        31.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "         95        33.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        100        35.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        105        37.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        110        38.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        115        40.7%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        120        42.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        125        44.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        130        46.0%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        135        47.8%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        140        49.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        145        51.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        150        53.1%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        155        54.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        160        56.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        165        58.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        170        60.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        175        61.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        180        63.7%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        185        65.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        190        67.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        195        69.0%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        200        70.8%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        205        72.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        210        74.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        215        76.1%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        220        77.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        225        79.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        230        81.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
-      "        235        83.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      " Pat./Woche Auslastung ρ Ø Wartezeit (d)    SE        95%-KI P(Engpass) Zeit im Engpass (%) Belastungsstatus\n",
+      "        200        70.8%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        205        72.6%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        210        74.3%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        215        76.1%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        220        77.9%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        225        79.6%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        230        81.4%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        235        83.2%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        240        85.0%           0.000 0.000  [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        245        86.7%           0.000 0.000 [-0.00, 0.00]       0.05                 0.0               OK\n",
+      "        250        88.5%           0.000 0.000 [-0.00, 0.00]       0.05                 0.1               OK\n",
+      "        255        90.3%           0.002 0.002 [-0.00, 0.01]       0.30                 0.9         kritisch\n",
+      "        260        92.0%           0.004 0.002 [-0.00, 0.01]       0.50                 1.4       Überlastet\n",
+      "        265        93.8%           0.029 0.012  [0.01, 0.05]       0.85                 6.8       Überlastet\n",
+      "        270        95.6%           0.069 0.025  [0.02, 0.12]       1.00                12.9       Überlastet\n",
+      "        275        97.3%           0.226 0.087  [0.06, 0.40]       1.00                27.0       Überlastet\n",
+      "        280        99.1%           0.300 0.084  [0.14, 0.47]       1.00                32.7       Überlastet\n",
+      "        285       100.9%           1.043 0.196  [0.66, 1.43]       1.00                62.4       Überlastet\n",
+      "        290       102.7%           1.225 0.139  [0.95, 1.50]       1.00                72.3       Überlastet\n",
+      "        295       104.4%           2.500 0.223  [2.06, 2.94]       1.00                78.2       Überlastet\n",
       "========================================================================================================================\n",
       "\n",
-      "✅ Keine kritische Belastung im untersuchten Bereich.\n",
+      " Belastungsschwelle ab ca. 260 Patienten/Woche (P(Engpass) ≥ 50%)\n",
       "\n",
       "Parameter: Betten=565, LOS=14 Tage, R=20, Dauer=150 Tage\n"
      ]
@@ -319,7 +298,7 @@
     "\n",
     "So lässt sich der \"Kipppunkt\" (Tipping Point) visuell oder rechnerisch finden.\n",
     "\"\"\"\n",
-    "patients_range = range(35, 236, 5)  # Start=35, Ende<236, Schrittweite=5\n",
+    "patients_range = range(200, 300, 5)  # Start=200, Ende<300, Schrittweite=5\n",
     "results = []\n",
     "\n",
     "for p_week in patients_range:\n",
